...
        variant="secondary"
      />
      <Button
        onPress={() => navigate('Main')}
        title="e2e login"
        variant="secondary"
        testID="e2eButton"
      />
    </Container>
  ) : null;
};

type User = FirebaseAuthTypes.User & {
...
